[gd_scene load_steps=12 format=3 uid="uid://bquibl4sumre2"]

[ext_resource type="Script" path="res://Assets/Scripts/BossHeart.gd" id="1_pw77e"]
[ext_resource type="Script" path="res://Assets/Scripts/Helpers/PIDControllerJoint.gd" id="2_vitgn"]
[ext_resource type="Script" path="res://Assets/Scripts/VisionSensor.gd" id="3_ldwj1"]
[ext_resource type="Script" path="res://Assets/Scripts/SlowSpin.gd" id="3_qaavf"]
[ext_resource type="Script" path="res://Assets/Scripts/PulseColor.gd" id="4_d5caa"]
[ext_resource type="Texture2D" uid="uid://hkkgfke8rb12" path="res://Assets/Art/Items/BossHeart.png" id="4_dkc6g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pagth"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_rymsh"]
resource_local_to_scene = true
radius = 74.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pov6i"]
resource_local_to_scene = true
radius = 10000.0

[sub_resource type="Gradient" id="Gradient_opurg"]
offsets = PackedFloat32Array(0, 0.58011)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hl7ol"]
gradient = SubResource("Gradient_opurg")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="BossHeart" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_pw77e")
autoAttractDelay = 10.0

[node name="PIDControllerJoint2D" type="Node2D" parent="."]
script = ExtResource("2_vitgn")
onlyTrackNode = true
disableInDist = false

[node name="PhysicsCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pagth")
disabled = true

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_rymsh")

[node name="AutoAttractArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false
script = ExtResource("3_ldwj1")
ignoreLineOfSight = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAttractArea"]
shape = SubResource("CircleShape2D_pov6i")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_dkc6g")
script = ExtResource("3_qaavf")

[node name="Shadow" type="Polygon2D" parent="Sprite2D"]
z_index = -1
scale = Vector2(6, 6)
color = Color(0.111197, 0.111197, 0.111197, 1)
texture = SubResource("GradientTexture2D_hl7ol")
polygon = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)

[node name="CentralGlow" type="Polygon2D" parent="Sprite2D"]
scale = Vector2(8, 8)
color = Color(0.855, 0.161, 0.161, 0.4)
texture = SubResource("GradientTexture2D_hl7ol")
polygon = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)
script = ExtResource("4_d5caa")
pulseRate = 0.4
pulseRange = Vector2(0, 0.4)
